--- a/public/css/template.css
+++ b/public/css/template.css
@@ -2458,6 +2458,150 @@ margin-left: -50%;
 .new-map .col-md-8 {
     float: right;
 }
+
+/* Popup */
+
+.popup-wrapper {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 9999;
+}
+
+.popup {
+    background-color: rgba(94, 95, 96, 0.7);
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    overflow: auto;
+}
+
+.popup-block {
+    position: relative;
+    background-color: white;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.15);
+    max-height: 90vh;
+}
+
+.popup-apartment {
+    max-height: 510px;
+    height: 90vh;
+    width: 1140px;
+}
+
+.popup-apartment-left {
+    width: 60%;
+    height: 100%;
+    float: left;
+}
+
+.popup-apartment-info {
+    position: absolute;
+    top: -10px;
+    left: 30px;
+    z-index: 1;
+}
+
+.popup-apartment-type {
+    display: inline-block;
+    border: 1px solid #ced2d2;
+    font-size: 20px;
+    color: #696969;
+    font-family: 'Iosevka Bold';
+    line-height: 1;
+    background: #eff0f0;
+    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.15);
+}
+
+.popup-apartment-type span {
+    text-transform: uppercase;
+    display: inline-block;
+    padding: 18px 20px;
+}
+
+.popup-apartment-type span + span {
+    border-left: 1px solid #ced2d2;
+    text-transform: none;
+}
+
+.popup-apartment-layout {
+    display: table;
+    width: 100%;
+    padding: 60px 30px 30px;
+    height: 100%;
+    position: relative;
+}
+
+.popup-apartment-wrapper {
+    display: table-cell;
+    vertical-align: middle;
+    text-align: center;
+    height: 100%;
+}
+
+.popup-apartment-wrapper img {
+    max-width: 600px;
+    max-height: 400px;
+}
+
+.popup-apartment-right {
+    float: left;
+    width: 40%;
+    height: 100%;
+    background-color: #eff0f0;
+    border-left: 1px solid #d6dcde;
+    padding: 20px;
+    position: relative;
+}
+
+.popup-apartment-payment {
+    text-transform: uppercase;
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    border-bottom: 2px solid #cfd1d1;
+}
+
+.popup-apartment-payment i {
+    width: 36px;
+    height: 36px;
+    display: inline-block;
+    margin-right: 20px;
+    background-position: center center;
+    background-repeat: no-repeat;
+    vertical-align: middle;
+}
+
+.popup-apartment-payment li span {
+    display: inline-block;
+    line-height: 1;
+}
+
+.popup-apartment-payment li {
+    padding: 10px 0;
+}
+
+.popup-apartment-payment li + li {
+    border-top: 1px solid #cfd1d1;
+}
+
+.popup-apartment-price-cta {
+    font-family: "Iosevka Bold";
+
+}
+
 @media (min-width: 992px) {
     .new-map .col-md-4 {
         padding-right: 0px;
