--- a/public/css/template.css
+++ b/public/css/template.css
@@ -574,6 +574,10 @@
     background: -webkit-linear-gradient(bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
     background: linear-gradient(to top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
     padding-bottom: 70px;
+    position: absolute;
+    left: 0;
+    right: 0;
+    z-index: 1;
 }
 
 @media (max-width: 767px) {
@@ -1912,9 +1916,8 @@
 }
 
 .slider-main {
-    padding-top: 15px;
     padding-bottom: 15px;
-    height: 515px;
+    height: 500px;
     overflow: hidden;
     position: relative;
 }
@@ -1971,13 +1974,16 @@
 	width: 100%;
 }
 */
-.slider-nav {
-    padding: 5px 0px 5px 0px;
-}
-
 .slider-nav.row {
     margin-left: -10px;
     margin-right: -10px;
+    margin-top: -10px;
+}
+
+@media (max-width: 991px) {
+    .slider-nav.row {
+        margin-top: 20px;
+    }
 }
 
 .preview-apartment-discount {
