--- a/public/css/template.css
+++ b/public/css/template.css
@@ -2830,145 +2830,44 @@
     padding: 0 10px;
 }
 
-/* SPINNER */
-
-.sk-fading-circle {
-    margin: 100px auto;
-    width: 40px;
-    height: 40px;
-    position: relative;
-}
-
-.sk-fading-circle .sk-circle {
-    width: 100%;
-    height: 100%;
+.popup-apartment-tooltip {
+    color: #666869;
+    font-family: "Open Sans";
+    font-size: 12px;
+    text-transform: none;
+    font-weight: normal;
+    background: white;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    border: 1px solid #bcc0c1;
     position: absolute;
-    left: 0;
-    top: 0;
+    right: -95px;
+    top: -130px;
+    padding: 15px 20px;
+    transform: skew(15deg);
+    -webkit-transform: skew(15deg);
+    -moz-transform: skew(15deg);
+    -o-transform: skew(15deg);
+    -ms-transform: skew(15deg);
+    width: 250px;
+    display: none;
 }
 
-.sk-fading-circle .sk-circle:before {
-    content: '';
+.popup-apartment-tooltip:after {
+    content: "";
+    position: absolute;
+    left: 120px;
+    bottom: -11px;
     display: block;
-    margin: 0 auto;
-    width: 15%;
-    height: 15%;
-    background-color: #666869;
-    border-radius: 100%;
-    -webkit-animation: sk-circleFadeDelay 1.2s infinite ease-in-out both;
-    animation: sk-circleFadeDelay 1.2s infinite ease-in-out both;
+    width: 20px;
+    height: 20px;
+    background-color: white;
+    transform: rotate(45deg);
+    box-shadow: 3px 3px 2px rgba(0, 0, 0, 0.15);
+    border-style: solid;
+    border-color: #bcc0c1;
+    border-width: 0 1px 1px 0;
 }
-.sk-fading-circle .sk-circle2 {
-    -webkit-transform: rotate(30deg);
-    -ms-transform: rotate(30deg);
-    transform: rotate(30deg);
-}
-.sk-fading-circle .sk-circle3 {
-    -webkit-transform: rotate(60deg);
-    -ms-transform: rotate(60deg);
-    transform: rotate(60deg);
-}
-.sk-fading-circle .sk-circle4 {
-    -webkit-transform: rotate(90deg);
-    -ms-transform: rotate(90deg);
-    transform: rotate(90deg);
-}
-.sk-fading-circle .sk-circle5 {
-    -webkit-transform: rotate(120deg);
-    -ms-transform: rotate(120deg);
-    transform: rotate(120deg);
-}
-.sk-fading-circle .sk-circle6 {
-    -webkit-transform: rotate(150deg);
-    -ms-transform: rotate(150deg);
-    transform: rotate(150deg);
-}
-.sk-fading-circle .sk-circle7 {
-    -webkit-transform: rotate(180deg);
-    -ms-transform: rotate(180deg);
-    transform: rotate(180deg);
-}
-.sk-fading-circle .sk-circle8 {
-    -webkit-transform: rotate(210deg);
-    -ms-transform: rotate(210deg);
-    transform: rotate(210deg);
-}
-.sk-fading-circle .sk-circle9 {
-    -webkit-transform: rotate(240deg);
-    -ms-transform: rotate(240deg);
-    transform: rotate(240deg);
-}
-.sk-fading-circle .sk-circle10 {
-    -webkit-transform: rotate(270deg);
-    -ms-transform: rotate(270deg);
-    transform: rotate(270deg);
-}
-.sk-fading-circle .sk-circle11 {
-    -webkit-transform: rotate(300deg);
-    -ms-transform: rotate(300deg);
-    transform: rotate(300deg);
-}
-.sk-fading-circle .sk-circle12 {
-    -webkit-transform: rotate(330deg);
-    -ms-transform: rotate(330deg);
-    transform: rotate(330deg);
-}
-.sk-fading-circle .sk-circle2:before {
-    -webkit-animation-delay: -1.1s;
-    animation-delay: -1.1s;
-}
-.sk-fading-circle .sk-circle3:before {
-    -webkit-animation-delay: -1s;
-    animation-delay: -1s;
-}
-.sk-fading-circle .sk-circle4:before {
-    -webkit-animation-delay: -0.9s;
-    animation-delay: -0.9s;
-}
-.sk-fading-circle .sk-circle5:before {
-    -webkit-animation-delay: -0.8s;
-    animation-delay: -0.8s;
-}
-.sk-fading-circle .sk-circle6:before {
-    -webkit-animation-delay: -0.7s;
-    animation-delay: -0.7s;
-}
-.sk-fading-circle .sk-circle7:before {
-    -webkit-animation-delay: -0.6s;
-    animation-delay: -0.6s;
-}
-.sk-fading-circle .sk-circle8:before {
-    -webkit-animation-delay: -0.5s;
-    animation-delay: -0.5s;
-}
-.sk-fading-circle .sk-circle9:before {
-    -webkit-animation-delay: -0.4s;
-    animation-delay: -0.4s;
-}
-.sk-fading-circle .sk-circle10:before {
-    -webkit-animation-delay: -0.3s;
-    animation-delay: -0.3s;
-}
-.sk-fading-circle .sk-circle11:before {
-    -webkit-animation-delay: -0.2s;
-    animation-delay: -0.2s;
-}
-.sk-fading-circle .sk-circle12:before {
-    -webkit-animation-delay: -0.1s;
-    animation-delay: -0.1s;
-}
-
-@-webkit-keyframes sk-circleFadeDelay {
-    0%, 39%, 100% { opacity: 0; }
-    40% { opacity: 1; }
-}
-
-@keyframes sk-circleFadeDelay {
-    0%, 39%, 100% { opacity: 0; }
-    40% { opacity: 1; }
-}
-
-/* END-SPINNER */
 
 @media (max-width: 1199px) {
     .popup-apartment-price-cta {
@@ -3212,4 +3111,293 @@
         min-height: 0px;
         box-shadow: 0px -2px 2px rgba(0, 0, 0, 0.2);
     }
+}
+
+/* SPINNER */
+
+.sk-fading-circle {
+    margin: 100px auto;
+    width: 40px;
+    height: 40px;
+    position: relative;
+}
+
+.sk-fading-circle .sk-circle {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+}
+
+.sk-fading-circle .sk-circle:before {
+    content: '';
+    display: block;
+    margin: 0 auto;
+    width: 15%;
+    height: 15%;
+    background-color: #666869;
+    border-radius: 100%;
+    -webkit-animation: sk-circleFadeDelay 1.2s infinite ease-in-out both;
+    animation: sk-circleFadeDelay 1.2s infinite ease-in-out both;
+}
+.sk-fading-circle .sk-circle2 {
+    -webkit-transform: rotate(30deg);
+    -ms-transform: rotate(30deg);
+    transform: rotate(30deg);
+}
+.sk-fading-circle .sk-circle3 {
+    -webkit-transform: rotate(60deg);
+    -ms-transform: rotate(60deg);
+    transform: rotate(60deg);
+}
+.sk-fading-circle .sk-circle4 {
+    -webkit-transform: rotate(90deg);
+    -ms-transform: rotate(90deg);
+    transform: rotate(90deg);
+}
+.sk-fading-circle .sk-circle5 {
+    -webkit-transform: rotate(120deg);
+    -ms-transform: rotate(120deg);
+    transform: rotate(120deg);
+}
+.sk-fading-circle .sk-circle6 {
+    -webkit-transform: rotate(150deg);
+    -ms-transform: rotate(150deg);
+    transform: rotate(150deg);
+}
+.sk-fading-circle .sk-circle7 {
+    -webkit-transform: rotate(180deg);
+    -ms-transform: rotate(180deg);
+    transform: rotate(180deg);
+}
+.sk-fading-circle .sk-circle8 {
+    -webkit-transform: rotate(210deg);
+    -ms-transform: rotate(210deg);
+    transform: rotate(210deg);
+}
+.sk-fading-circle .sk-circle9 {
+    -webkit-transform: rotate(240deg);
+    -ms-transform: rotate(240deg);
+    transform: rotate(240deg);
+}
+.sk-fading-circle .sk-circle10 {
+    -webkit-transform: rotate(270deg);
+    -ms-transform: rotate(270deg);
+    transform: rotate(270deg);
+}
+.sk-fading-circle .sk-circle11 {
+    -webkit-transform: rotate(300deg);
+    -ms-transform: rotate(300deg);
+    transform: rotate(300deg);
+}
+.sk-fading-circle .sk-circle12 {
+    -webkit-transform: rotate(330deg);
+    -ms-transform: rotate(330deg);
+    transform: rotate(330deg);
+}
+.sk-fading-circle .sk-circle2:before {
+    -webkit-animation-delay: -1.1s;
+    animation-delay: -1.1s;
+}
+.sk-fading-circle .sk-circle3:before {
+    -webkit-animation-delay: -1s;
+    animation-delay: -1s;
+}
+.sk-fading-circle .sk-circle4:before {
+    -webkit-animation-delay: -0.9s;
+    animation-delay: -0.9s;
+}
+.sk-fading-circle .sk-circle5:before {
+    -webkit-animation-delay: -0.8s;
+    animation-delay: -0.8s;
+}
+.sk-fading-circle .sk-circle6:before {
+    -webkit-animation-delay: -0.7s;
+    animation-delay: -0.7s;
+}
+.sk-fading-circle .sk-circle7:before {
+    -webkit-animation-delay: -0.6s;
+    animation-delay: -0.6s;
+}
+.sk-fading-circle .sk-circle8:before {
+    -webkit-animation-delay: -0.5s;
+    animation-delay: -0.5s;
+}
+.sk-fading-circle .sk-circle9:before {
+    -webkit-animation-delay: -0.4s;
+    animation-delay: -0.4s;
+}
+.sk-fading-circle .sk-circle10:before {
+    -webkit-animation-delay: -0.3s;
+    animation-delay: -0.3s;
+}
+.sk-fading-circle .sk-circle11:before {
+    -webkit-animation-delay: -0.2s;
+    animation-delay: -0.2s;
+}
+.sk-fading-circle .sk-circle12:before {
+    -webkit-animation-delay: -0.1s;
+    animation-delay: -0.1s;
+}
+
+@-webkit-keyframes sk-circleFadeDelay {
+    0%, 39%, 100% { opacity: 0; }
+    40% { opacity: 1; }
+}
+
+@keyframes sk-circleFadeDelay {
+    0%, 39%, 100% { opacity: 0; }
+    40% { opacity: 1; }
+}
+
+/* END-SPINNER */
+
+/* DEVELOPER */
+
+.property-developer-search .col-md-9{
+    padding-right: 0;
+}
+
+.property-developer-search .col-md-3{
+    padding-left: 0;
+}
+
+.property-developer-search {
+    background: white;
+    margin-bottom: 40px;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
+}
+
+.property-developer-search-filters {
+    padding: 20px;
+}
+
+.property-developer-search-filters-rooms {
+    padding-bottom: 15px;
+    border-bottom: 1px solid #d1d3d5;
+}
+
+.property-developer-search-result {
+    position: relative;
+    color: #ffffff;
+    padding: 20px;
+    height: 180px;
+    background: rgba(83,91,95,1);
+    background: -moz-linear-gradient(-45deg, rgba(83,91,95,1) 0%, rgba(61,63,67,1) 100%);
+    background: -webkit-gradient(left top, right bottom, color-stop(0%, rgba(83,91,95,1)), color-stop(100%, rgba(61,63,67,1)));
+    background: -webkit-linear-gradient(-45deg, rgba(83,91,95,1) 0%, rgba(61,63,67,1) 100%);
+    background: -o-linear-gradient(-45deg, rgba(83,91,95,1) 0%, rgba(61,63,67,1) 100%);
+    background: -ms-linear-gradient(-45deg, rgba(83,91,95,1) 0%, rgba(61,63,67,1) 100%);
+    background: linear-gradient(135deg, rgba(83,91,95,1) 0%, rgba(61,63,67,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#535b5f', endColorstr='#3d3f43', GradientType=1 );
+}
+
+.property-developer-search-result:before {
+    content: "";
+    position: absolute;
+    top: 10px;
+    left: -12px;
+    display: block;
+    background-color: rgba(83,91,95,1);
+    width: 20px;
+    height: 20px;
+    transform: rotate(45deg);
+}
+
+.property-developer-search-result-head {
+    font-weight: bold;
+    text-transform: uppercase;
+    padding-bottom: 12px;
+    line-height: 1;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+}
+
+.property-developer-search-result-value {
+    padding: 15px 0;
+    display: table;
+}
+
+.property-developer-search-result-value-number {
+    font-size: 40px;
+    display: inline-block;
+    font-weight: bold;
+    line-height: 1;
+    display: table-cell;
+    width: 80px;
+    vertical-align: top;
+    padding-right: 10px;
+}
+
+.property-developer-search-result-value-description {
+    display: inline-block;
+    opacity: 0.7;
+    display: table-cell;
+}
+
+
+.property-developer-search-result-button {
+    display: table;
+    width: 100%;
+}
+
+.property-developer-search-result-button-left {
+    display: table-cell;
+    vertical-align: top;
+}
+
+.property-developer-search-result-button-right {
+    display: table-cell;
+    width: 50px;
+    padding-left: 10px;
+    vertical-align: top;
+}
+
+.property-developer-search-result-button-left button{
+    background-color: #4ebb00;
+    border-radius: 30px;
+    color: #ffffff;
+    text-transform: uppercase;
+    font-weight: bold;
+    padding: 13px;
+    width: 100%;
+    line-height: 1;
+    border: 0;
+    box-shadow: 0 2px 5px rgba(78, 187, 0, 0.5);
+}
+
+.property-developer-search-result-button-left button:hover {
+    background-color: #51c900;
+    box-shadow: 0 1px 3px rgba(78, 187, 0, 0.7);
+}
+
+.property-developer-search-result-button-right button {
+    background-color: rgba(255, 255, 255, 0.7);
+    position: relative;
+    width: 40px;
+    height: 40px;
+    border: 0;
+    border-radius: 50px;
+    transform: rotate(45deg);
+}
+
+.property-developer-search-result-button-right button:hover {
+    background-color: rgba(255, 255, 255, 0.8);
+}
+
+.property-developer-search-result-button-right i {
+    width: 1px;
+    height: 15px;
+    display: block;
+    background-color: #67696d;
+    margin: auto;
+}
+
+.property-developer-search-result-button-right i + i {
+    width: 16px;
+    height: 1px;
+    background-color: #67696d;
+    position: absolute;
+    left: 12px;
+    top: 20px;
 }
