--- a/frontend/src/pages/home/blocks/section1/section1.scss
+++ b/frontend/src/pages/home/blocks/section1/section1.scss
@@ -1,6 +1,7 @@
 @import './../../../../includes/variables.scss';
 
 .section1 {
+  box-sizing: border-box;
 
   @media screen and (min-width: $screen-md) {
     background-image: url("./../../images/firs-screen.jpg");
@@ -17,7 +18,7 @@
     // background-size: contain;
     background-position: 0 0;
     background-repeat: no-repeat;
-    background-size: contain;
+    // background-size: contain;
   }
 
 
